# dl-rosatom

./: .gitignore  README.md  Rosatom_docs.ipynb  Rosatom_docs.py  backend-release.7z  convertor-to-txt.py
backend/: CMakeLists.txt  backend.cpp  backend.h  main.cpp
converted-data/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+570 more)
docs/: gen_table.json
frontend/: datamanipulator.h  frontend.pro  main.cpp  main.qml  resultsmodel.h
ipc-protocol/: protocol.thrift
